--- a/Stock Portfolio Tracker/Stock_Portfolio_Weighing_App.html
+++ b/Stock Portfolio Tracker/Stock_Portfolio_Weighing_App.html
@@ -2,10 +2,51 @@
 <html>
 <head>
   <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f7fa;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .container {
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      width: 100%;
+      position: relative;
+    }
+    h2 {
+      color: #333;
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+    .indicator {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background-color: #e8f0fe;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      font-size: 14px;
+      color: #333;
+    }
+    .indicator p {
+      margin: 5px 0;
+    }
     .grid-container {
       display: flex;
       flex-direction: column;
       max-width: 450px;
+      margin: 0 auto;
+      margin-top: 30px; /* Added spacing between buttons and grid */
     }
     .grid {
       display: grid;
@@ -13,52 +54,185 @@
       gap: 5px;
       margin-top: 10px;
     }
-    .row-labels {
-      display: grid;
-      grid-template-rows: repeat(3, 1fr);
-      gap: 5px;
-      margin-right: 5px;
-    }
     .cell {
-      border: 1px solid #ccc;
-      padding: 10px;
+      border: 1px solid #e0e0e0;
+      padding: 15px;
       text-align: center;
-      background-color: rgba(0, 128, 0, 0.2); /* Default light green */
+      background-color: #f9f9f9;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+    .cell:hover {
+      background-color: #e8ecef;
     }
     .overweight {
-      background-color: rgba(255, 0, 0, 0.5); /* Red for overweight (>33%) */
+      background-color: rgba(255, 99, 71, 0.3);
+      font-weight: bold;
     }
     .label {
       font-weight: bold;
       background-color: #f0f0f0;
+      border-radius: 8px;
+      padding: 15px;
     }
     .header {
       font-weight: bold;
       background-color: #e0e0e0;
+      border-radius: 8px;
+      padding: 15px;
     }
     .invalid {
-      border: 2px solid red; /* Highlight invalid inputs */
+      border: 2px solid #ff6347;
     }
     .total-display {
       font-weight: bold;
-      margin: 10px 0;
+      margin: 15px 0;
+      color: #555;
+      text-align: center;
+      background-color: #e8f0fe;
+      padding: 10px;
+      border-radius: 8px;
     }
     .input-group {
+      margin: 10px 0;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .input-group input, .input-group select {
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 14px;
+      transition: border-color 0.3s ease;
+    }
+    .input-group input:focus, .input-group select:focus {
+      border-color: #007bff;
+      outline: none;
+    }
+    .risk-input {
+      margin: 15px 0;
+      text-align: center;
+    }
+    .risk-input label {
+      font-size: 14px;
+      color: #555;
+      margin-right: 10px;
+    }
+    .risk-input input {
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      width: 100px;
+    }
+    .rebalance-suggestions {
+      margin-top: 30px; /* Added spacing between grid and suggestions */
+      padding: 15px;
+      background-color: #f8f9fa;
+      border-radius: 8px;
+      border: 1px solid #e0e0e0;
+    }
+    .rebalance-suggestions h3 {
+      margin-top: 0;
+      font-size: 18px;
+      color: #333;
+    }
+    .rebalance-suggestions p {
       margin: 5px 0;
+      font-size: 14px;
+      color: #555;
+    }
+    .button-group {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.1s ease;
+    }
+    button:hover {
+      transform: translateY(-2px);
+    }
+    #addStock {
+      background-color: #28a745;
+      color: white;
+    }
+    #addStock:hover {
+      background-color: #218838;
+    }
+    #portfolioForm button[type="submit"] {
+      background-color: #007bff;
+      color: white;
+    }
+    #portfolioForm button[type="submit"]:hover {
+      background-color: #0056b3;
+    }
+    #clearForm {
+      background-color: #dc3545;
+      color: white;
+    }
+    #clearForm:hover {
+      background-color: #c82333;
+    }
+    .remove-btn {
+      background-color: #ff6347;
+      color: white;
+      padding: 5px 10px;
+      font-size: 12px;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    .remove-btn:hover {
+      background-color: #e5533d;
     }
   </style>
 </head>
 <body>
-  <form id="portfolioForm">
-    <div id="stockInputs"></div>
-    <div class="total-display">Total Weight: <span id="totalWeight">0.00</span>%</div>
-    <button type="button" id="addStock">Add Stock</button>
-    <button type="submit">Show Grid</button>
-    <button type="button" id="clearForm">Clear Form</button>
-  </form>
-  <div id="gridContainer" class="grid-container"></div>
+  <div class="container">
+    <h2>Stock Portfolio Weighting App</h2>
+    <div class="indicator" id="portfolioMetrics">
+      <p>Beta: <span id="portfolioBeta">0.00</span></p>
+      <p>Alpha: <span id="portfolioAlpha">0.00</span></p>
+      <p>Risk: <span id="portfolioRisk">0.00</span>%</p>
+    </div>
+    <form id="portfolioForm">
+      <div id="stockInputs"></div>
+      <div class="total-display">Total Weight: <span id="totalWeight">0.00</span>%</div>
+      <div class="risk-input">
+        <label for="desiredRisk">Desired Risk (%):</label>
+        <input type="number" step="0.01" id="desiredRisk" value="50" min="0" max="100">
+      </div>
+      <div class="button-group">
+        <button type="button" id="addStock">Add Stock</button>
+        <button type="submit">Show Grid</button>
+        <button type="button" id="clearForm">Clear Form</button>
+      </div>
+    </form>
+    <div id="gridContainer" class="grid-container"></div>
+    <div id="rebalanceSuggestions" class="rebalance-suggestions"></div>
+  </div>
 
   <script>
+    // Placeholder beta and alpha values (replace with API data in a real app)
+    const stockMetrics = {
+      "PLTR": { beta: 1.8, alpha: 0.5 },
+      "AMZN": { beta: 1.2, alpha: 0.3 },
+      "TSLA": { beta: 2.0, alpha: -0.2 },
+      "NVDA": { beta: 1.5, alpha: 0.4 },
+      "SOUN": { beta: 2.5, alpha: -0.5 },
+      "AAPL": { beta: 1.1, alpha: 0.2 },
+      "FSK": { beta: 0.8, alpha: 0.1 },
+      "JEPQ": { beta: 0.9, alpha: 0.0 },
+      "VTI": { beta: 1.0, alpha: 0.0 },
+      "SOFI": { beta: 1.7, alpha: -0.3 }
+    };
+
     // Initialize with one stock input
     let stockCount = 0;
     function addStockInput() {
@@ -66,22 +240,28 @@
       let stockInputs = document.getElementById("stockInputs");
       let inputGroup = document.createElement("div");
       inputGroup.className = "input-group";
+      inputGroup.id = `inputGroup${stockCount}`;
       inputGroup.innerHTML = `
-        Stock ${stockCount}: <input type="text" placeholder="Ticker" id="s${stockCount}">
-        Weight (%): <input type="number" step="0.01" placeholder="%" id="w${stockCount}" min="0" max="100">
-        Cap: <select id="cap${stockCount}">
+        <input type="text" placeholder="Ticker" id="s${stockCount}">
+        <input type="number" step="0.01" placeholder="Weight (%)" id="w${stockCount}" min="0" max="100">
+        <select id="cap${stockCount}">
           <option value="Large">Large</option>
           <option value="Mid">Mid</option>
           <option value="Small">Small</option>
         </select>
-        Style: <select id="style${stockCount}">
+        <select id="style${stockCount}">
           <option value="Value">Value</option>
           <option value="Blend">Blend</option>
           <option value="Growth">Growth</option>
-        </select><br>
+        </select>
+        <button type="button" class="remove-btn" id="remove${stockCount}">Remove</button>
       `;
       stockInputs.appendChild(inputGroup);
       document.getElementById(`w${stockCount}`).addEventListener("input", updateTotalWeight);
+      document.getElementById(`remove${stockCount}`).addEventListener("click", function() {
+        inputGroup.remove();
+        updateTotalWeight();
+      });
     }
 
     // Add first stock input on page load
@@ -93,8 +273,9 @@
     // Update total weight dynamically
     function updateTotalWeight() {
       let total = 0;
-      for (let i = 1; i <= stockCount; i++) {
-        let weightInput = document.getElementById(`w${i}`);
+      let inputGroups = document.querySelectorAll(".input-group");
+      inputGroups.forEach(group => {
+        let weightInput = group.querySelector('[id^="w"]');
         if (weightInput) {
           let weight = Number(weightInput.value) || 0;
           total += weight;
@@ -104,7 +285,7 @@
             weightInput.classList.remove("invalid");
           }
         }
-      }
+      });
       document.getElementById("totalWeight").textContent = total.toFixed(2);
     }
 
@@ -112,42 +293,62 @@
     document.getElementById("clearForm").addEventListener("click", function() {
       document.getElementById("portfolioForm").reset();
       document.getElementById("gridContainer").innerHTML = "";
+      document.getElementById("rebalanceSuggestions").innerHTML = "";
       document.getElementById("stockInputs").innerHTML = "";
       stockCount = 0;
-      addStockInput(); // Reset with one input
+      addStockInput();
       document.getElementById("totalWeight").textContent = "0.00";
+      document.getElementById("portfolioBeta").textContent = "0.00";
+      document.getElementById("portfolioAlpha").textContent = "0.00";
+      document.getElementById("portfolioRisk").textContent = "0.00";
     });
 
     document.getElementById("portfolioForm").addEventListener("submit", function(e) {
       e.preventDefault();
-      console.log("Form submitted"); // Debug log
+      console.log("Form submitted");
       let stocks = [];
-      for (let i = 1; i <= stockCount; i++) {
-        let ticker = document.getElementById(`s${i}`);
-        let weight = document.getElementById(`w${i}`);
-        let cap = document.getElementById(`cap${i}`);
-        let style = document.getElementById(`style${i}`);
+      let inputGroups = document.querySelectorAll(".input-group");
+      inputGroups.forEach(group => {
+        let ticker = group.querySelector('[id^="s"]');
+        let weight = group.querySelector('[id^="w"]');
+        let cap = group.querySelector('[id^="cap"]');
+        let style = group.querySelector('[id^="style"]');
         if (ticker && weight && cap && style && ticker.value && Number(weight.value) > 0) {
           stocks.push({
-            name: ticker.value,
+            name: ticker.value.toUpperCase(),
             weight: Number(weight.value),
             cap: cap.value,
             style: style.value
           });
-          console.log(`Added stock: ${ticker.value}, Weight: ${weight.value}, Cap: ${cap.value}, Style: ${style.value}`); // Debug log
+          console.log(`Added stock: ${ticker.value}, Weight: ${weight.value}, Cap: ${cap.value}, Style: ${style.value}`);
         }
-      }
-      console.log("Stocks array:", stocks); // Debug log
+      });
+      console.log("Stocks array:", stocks);
       if (stocks.length === 0) {
         alert("Please add at least one stock with a valid weight!");
         return;
       }
       let total = stocks.reduce((sum, stock) => sum + stock.weight, 0);
-      console.log("Total weight:", total); // Debug log
+      console.log("Total weight:", total);
       if (Math.abs(total - 100) > 0.01) {
         alert("Weights must add up to 100% (allowing for minor decimal differences)!");
         return;
       }
+
+      // Calculate portfolio beta and alpha
+      let portfolioBeta = 0;
+      let portfolioAlpha = 0;
+      stocks.forEach(stock => {
+        let metrics = stockMetrics[stock.name] || { beta: 1.0, alpha: 0.0 };
+        portfolioBeta += (stock.weight / 100) * metrics.beta;
+        portfolioAlpha += (stock.weight / 100) * metrics.alpha;
+      });
+
+      // Calculate risk percentage (simplified: based on beta)
+      let riskPercentage = (portfolioBeta * 50).toFixed(2);
+      document.getElementById("portfolioBeta").textContent = portfolioBeta.toFixed(2);
+      document.getElementById("portfolioAlpha").textContent = portfolioAlpha.toFixed(2);
+      document.getElementById("portfolioRisk").textContent = riskPercentage;
 
       // Initialize 3x3 grid (Large, Mid, Small) x (Value, Blend, Growth)
       let grid = [
@@ -170,7 +371,7 @@
       headerRow.style.display = "grid";
       headerRow.style.gridTemplateColumns = "100px repeat(3, 1fr)";
       headerRow.style.gap = "5px";
-      headerRow.innerHTML = '<div class="cell label"></div>'; // Empty corner cell
+      headerRow.innerHTML = '<div class="cell label"></div>';
       ["Value", "Blend", "Growth"].forEach(style => {
         let cell = document.createElement("div");
         cell.className = "cell header";
@@ -186,13 +387,11 @@
         row.style.gridTemplateColumns = "100px repeat(3, 1fr)";
         row.style.gap = "5px";
 
-        // Row label (Small, Mid, Large)
         let capCell = document.createElement("div");
         capCell.className = "cell label";
         capCell.textContent = cap;
         row.appendChild(capCell);
 
-        // Data cells
         grid[i].forEach(weight => {
           let cell = document.createElement("div");
           cell.className = "cell";
@@ -203,7 +402,40 @@
         });
         gridContainer.appendChild(row);
       });
-      console.log("Grid displayed"); // Debug log
+
+      // Rebalancing suggestions
+      let desiredRisk = Number(document.getElementById("desiredRisk").value);
+      let desiredBeta = desiredRisk / 50;
+      let rebalanceSuggestions = document.getElementById("rebalanceSuggestions");
+      rebalanceSuggestions.innerHTML = "<h3>Rebalancing Suggestions</h3>";
+
+      if (portfolioBeta > desiredBeta) {
+        let highBetaStocks = stocks.filter(stock => stockMetrics[stock.name]?.beta > 1.0);
+        let lowBetaStocks = stocks.filter(stock => stockMetrics[stock.name]?.beta <= 1.0);
+        if (highBetaStocks.length > 0 && lowBetaStocks.length > 0) {
+          rebalanceSuggestions.innerHTML += `<p>Current Beta (${portfolioBeta.toFixed(2)}) is higher than desired (${desiredBeta.toFixed(2)}).</p>`;
+          rebalanceSuggestions.innerHTML += `<p>Consider reducing weight in high-beta stocks like ${highBetaStocks.map(s => s.name).join(", ")} and increasing weight in lower-beta stocks like ${lowBetaStocks.map(s => s.name).join(", ")}.</p>`;
+        }
+      } else if (portfolioBeta < desiredBeta) {
+        let highBetaStocks = stocks.filter(stock => stockMetrics[stock.name]?.beta > 1.0);
+        let lowBetaStocks = stocks.filter(stock => stockMetrics[stock.name]?.beta <= 1.0);
+        if (highBetaStocks.length > 0 && lowBetaStocks.length > 0) {
+          rebalanceSuggestions.innerHTML += `<p>Current Beta (${portfolioBeta.toFixed(2)}) is lower than desired (${desiredBeta.toFixed(2)}).</p>`;
+          rebalanceSuggestions.innerHTML += `<p>Consider increasing weight in high-beta stocks like ${highBetaStocks.map(s => s.name).join(", ")} and reducing weight in lower-beta stocks like ${lowBetaStocks.map(s => s.name).join(", ")}.</p>`;
+        }
+      } else {
+        rebalanceSuggestions.innerHTML += `<p>Portfolio Beta (${portfolioBeta.toFixed(2)}) matches your desired risk level.</p>`;
+      }
+
+      if (portfolioAlpha < 0) {
+        let highAlphaStocks = stocks.filter(stock => stockMetrics[stock.name]?.alpha > 0);
+        let lowAlphaStocks = stocks.filter(stock => stockMetrics[stock.name]?.alpha <= 0);
+        if (highAlphaStocks.length > 0 && lowAlphaStocks.length > 0) {
+          rebalanceSuggestions.innerHTML += `<p>Portfolio Alpha (${portfolioAlpha.toFixed(2)}) is negative. Consider increasing weight in stocks with positive alpha like ${highAlphaStocks.map(s => s.name).join(", ")} and reducing weight in stocks with negative alpha like ${lowAlphaStocks.map(s => s.name).join(", ")}.</p>`;
+        }
+      } else {
+        rebalanceSuggestions.innerHTML += `<p>Portfolio Alpha (${portfolioAlpha.toFixed(2)}) is positive or zero, which is optimal.</p>`;
+      }
     });
   </script>
 </body>
